# RemiBot

./: .gitignore  README.md  bot.py  pyproject.toml  rename_cover_files.py
docs/: user_guide.md
docs/dev/: niuniudazuozhan.md
migrations/versions/: d1e63f60aede_niuniudazuozhan.py
src/plugins/: ping.py
src/plugins/core/: __init__.py
src/plugins/core/plugins/help/: __init__.py
src/plugins/maicn/: alias.py  config.py  messages.py
src/plugins/maicn/commands/: alconna.py  matchers.py
src/plugins/maicn/commands/cmds/: __init__.py  cmd_account.py  cmd_score.py  helpers.py
src/plugins/maicn/libraries/: __init__.py  b50_image.py  lxns.py  maimai_cn.py
src/plugins/maimaidx/: __init__.py  config.py
src/plugins/maimaidx/libraries/: lxns.py  maimai_cn.py
src/plugins/maimaidx/plugins/maicn/: __init__.py  alconna.py  config.py  enums.py  maimai_cn_helper.py
src/plugins/niuniudazuozhan/: EXCEPTION_HANDLING_SUMMARY.md  LEVEL_SYSTEM_REMOVAL.md  README.md  __init__.py  config.py
src/plugins/niuniudazuozhan/commands/: __init__.py  basic.py  interactive.py
src/plugins/niuniudazuozhan/docs/: __init__.py  exception_handling_guide.md
src/plugins/niuniudazuozhan/models/: __init__.py  user_data.py
src/plugins/niuniudazuozhan/services/: __init__.py  cooldown.py  database.py  game_logic.py
src/plugins/niuniudazuozhan/tests/: __init__.py  test_exception_handler.py
src/plugins/niuniudazuozhan/utils/: __init__.py  exception_handler.py  random_gen.py  validators.py
src/plugins/permission_manager/: __init__.py
src/plugins/permission_manager/commands/: __init__.py  alconna.py  handlers.py  matchers.py
src/plugins/permission_manager/config/: __init__.py  rbac_model.conf  rbac_policy.csv
src/plugins/permission_manager/core/: __init__.py  decorators.py  manager.py  models.py
src/plugins/roll/: __init__.py
src/utils/helpers/: alconna_helper.py  remi_service_helper.py
(+4 files in other folders)
