[project]
name = "remibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "maimai-py>=1.3.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.58.1",
    "nonebot2[fastapi]>=2.4.2",
    "wahlap-mai-ass-expander",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]

[tool.uv.sources]
wahlap-mai-ass-expander = { path = "../Wahlap-Mai-Ass-Expander" }
